edit post page updates graphicly